--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^22.13.13",
+		"@types/pikaday": "^1.7.9",
 		"daisyui": "^5.0.9",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -34,6 +35,7 @@
 		"dbs-proj-svelte": "file:",
 		"gsap": "^3.12.7",
 		"mysql2": "^3.14.0",
+		"pikaday": "^1.8.2",
 		"split-type": "^0.3.4"
 	}
 }
